--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ html, body {
     z-index: 0;
     visibility: hidden;
 }
+#map:hover{
+    cursor:grab;
+}
 /*Enter Screen*/
 #enterDiv{
     visibility: hidden;
@@ -31,6 +34,9 @@ html, body {
     top:40%;
     animation:0.5s fadeOutEnterDiv;
 }
+#enterDiv:hover{
+    cursor:default;
+}
 #enterDiv.fadeIn{
     opacity: 80%;
     animation:0.5s fadeInEnterDiv;
@@ -38,15 +44,79 @@ html, body {
 #enterButton{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     position:relative;
-    z-index:1000;
+    z-index:900;
     padding:8px 20px;
     border:0px;
     border-radius:15px;
     background-color: grey;
-    font-size: 20px;  
+    font-size:0px;  
     margin-top:15px;
     color:white;
+    cursor:default;
 }
+#enterButton.ready:hover{
+    cursor: pointer;
+}
+#enterButton.ready{
+    font-size:20px;
+    animation: 1s enterReady;
+}
+@keyframes enterReady{
+    from{
+        font-size:0px;
+    }
+    to{
+        font-size:20px;
+    }
+}
+#enterLoader{
+    position:absolute;
+    top:17.5px;
+    width:40px;
+    z-index:1000;
+    height:10px;
+    overflow:hidden;
+    border-radius:20px;
+}
+.circlesContainer{
+    width:60px;
+    position:relative;
+    display:flex;
+    justify-content: space-around;
+}
+#c1{
+    left:40px;
+    animation: 2s c1 linear infinite;
+}
+#c2{
+    left:0px;
+    top:-10px;
+    animation: 2s c2 linear infinite;
+}
+.c{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 12px 12px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    background-color:white;
+    height:10px;
+    width:10px;
+    border-radius:10px;
+}
+@keyframes c1{
+    from{
+        left:-40px
+    }
+    to{
+        left:0px;
+    }
+}
+@keyframes c2{
+    from{
+        left:0px
+    }
+    to{
+        left:40px;
+    }
+}
+
 #onLoadLocation{
     margin-top:10px;
     margin-bottom:10px;
@@ -62,6 +132,9 @@ html, body {
     background-color:white;
     border-radius: 5px; 
     width:auto;
+}
+#refreshButton:hover{
+    cursor:pointer;
 }
 /* Overlay */
 #overlay{    
@@ -137,6 +210,10 @@ html, body {
     border-radius:10px; 
     opacity: 80%;
     width:auto;
+    top: 1px;
+}
+.hideButton:hover{
+    cursor:pointer;
 }
 #cityAlert{
     visibility:hidden;
@@ -156,26 +233,12 @@ html, body {
     width:auto;
     animation: 1s cityAlertHide
 }
+#cityAlert:hover{
+    cursor:default;
+}
 #cityAlert.show{
     left:60px;
     animation:0.5s cityAlertShow;
-}
-
-@keyframes cityAlertShow{
-    from{
-        left:-300px;
-    }
-    to{
-        left:60px;
-    }
-}
-@keyframes cityAlertHide{
-    from{
-        left:60px;
-    }
-    to{
-        left:-300px;
-    }
 }
 
 /* button nav */
@@ -189,6 +252,9 @@ html, body {
     border-radius: 10px 10px 30px 30px;
     top: -350px;
     animation: 1s menuHide;
+}
+#buttonContainer:hover{
+    cursor:default;
 }
 #buttonContainer.show{
     top:0px;
@@ -221,6 +287,9 @@ html, body {
     border-radius: 10px 10px 30px 30px;
     z-index:200;
 }
+#reCenter:hover{
+    cursor:pointer;
+}
 #cityButtons{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     position: relative;
@@ -228,6 +297,7 @@ html, body {
     flex-direction:column;
     align-items: center;
     justify-content: space-around;
+
     background-color:grey;
     margin:10px;
     width: 100%;
@@ -250,6 +320,9 @@ html, body {
     border-radius:30px;
     border: 0px;
     margin:5px;
+}
+.buttons:hover{
+    cursor:pointer;
 }
 .buttonIcons{
     position: relative;
@@ -290,6 +363,21 @@ html, body {
     background-color:grey;
     animation: 0.5s button-on;
 }
+#newsButton{
+    animation: 0.5s button-off;
+}
+#newsButton.on{
+    background-color:grey;
+    animation: 0.5s button-on;
+}
+#eventButton{
+    animation: 0.5s button-off;
+}
+#eventButton.on{
+    background-color:grey;
+    animation: 0.5s button-on;
+}
+
 
 #attractionDiv{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -307,6 +395,9 @@ html, body {
     justify-content: space-around;
     visibility:hidden;
 }
+#attractionDiv:hover{
+    cursor:default;
+}
 #attractionDiv.show{
     bottom:0px;
     animation: 0.5s checklistShow;
@@ -321,6 +412,9 @@ html, body {
     width:30px;
     height:30px;
     animation: 0.5s button-off;
+}
+.attractionSelector:hover{
+    cursor:pointer;
 }
 .checked{
     background-color:grey;
@@ -380,9 +474,200 @@ html, body {
     border:1px solid black;
     border-radius: 5px; 
 }
+/* News Scroller */
+#newsDisplay{
+    display:flex;
+    flex-direction:column;
+    visibility: hidden;
+}
+#newsNav{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 2px, rgba(0, 0, 0, 0) 0px -12px 30px, rgba(0, 0, 0, 0) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0) 0px -3px 5px;
+    position:relative;
+    height:30px;
+    width:100%;
+    border-radius: 10px 10px 0 0;  
+    text-align:center;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+}
+#newsTitle{
+    font-weight:bold;
+    font-size:12px;
+}
+#newsScroll{
+    position:relative;
+    max-height:250px;
+    overflow:hidden;
+    overflow:auto;
+}
+#newsScroll::-webkit-scrollbar{
+    width:10px; 
+}
 
+#newsScroll::-webkit-scrollbar-track {
+    margin:10px;     
+}
+#newsScroll::-webkit-scrollbar-thumb {
+    background-color: grey;   
+    border-radius: 4px;  
+    border-right: 2px solid white;
+    border-left:2px solid white;
+    margin:5px;
+}
+#newsScroll ul{
+    margin:10px;
+    padding:0px;
+}
+#newsList li{
+    height: auto;
+    background-color:lightgrey;
+    list-style:none;
+    margin:10px;
+    padding:0px;
+    border: 0px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 2px, rgba(0, 0, 0, 0) 0px -12px 30px, rgba(0, 0, 0, 0.1) 0px 4px 6px, rgba(0, 0, 0, 0) 0px 12px 13px, rgba(0, 0, 0, 0.1) 0px -3px 5px;
+    transition: 0.3s;
+}
+#newsList li:hover{
+    background-color:grey;
+    transition: 0.3s;
+    cursor: pointer;
+    padding: 10px;
+    margin: 10px;
+}
+#articleTitle{
+    color:white;
+}
+#newsCategory{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 2px, rgba(0, 0, 0, 0) 0px -12px 30px, rgba(0, 0, 0, 0) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0) 0px -3px 5px;
+    position:absolute;
+    z-index: 1000;
+    background-color:grey;
+    color:white;
+    border: 0px;
+    border-radius: 10px; 
+    width:auto;
+    left:5px;
+    padding:1px;
+    opacity: 80%;
+}
+/* Event Scroller */
+#eventDisplay{
+    display:flex;
+    flex-direction:column; 
+    visibility: hidden;
+}
 
+#eventNavTitle{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 2px, rgba(0, 0, 0, 0) 0px -12px 30px, rgba(0, 0, 0, 0) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0) 0px -3px 5px;
+    position:relative;
+    width:100%;
+    height:30px;
+    border-radius: 10px 10px 0 0;  
+    text-align:center;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    font-size:12px;
+    font-weight:bold;
+}
+#eventNav{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 2px, rgba(0, 0, 0, 0) 0px -12px 30px, rgba(0, 0, 0, 0) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0) 0px -3px 5px;
+    position:relative;
+    height:30px;
+    width:100%;
+    border-radius: 10px 10px 0 0;  
+    text-align:center;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+}
+#eventScroll{
+    position:relative;
+    max-height:250px;
+    overflow:hidden;
+    overflow:auto;
+}
+#eventScroll::-webkit-scrollbar{
+    width:10px; 
+}
 
+#eventScroll::-webkit-scrollbar-track {
+    margin:10px;     
+}
+#eventScroll::-webkit-scrollbar-thumb {
+    background-color: grey;   
+    border-radius: 4px;  
+    border-right: 2px solid white;
+    border-left:2px solid white;
+    margin:5px;
+}
+#eventScroll ul{
+    margin:10px;
+    padding:0px;
+}
+#eventList li{
+    height: auto;
+    background-color:lightgrey;
+    list-style:none;
+    margin:10px;
+    padding:0px;
+    border: 0px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 2px, rgba(0, 0, 0, 0) 0px -12px 30px, rgba(0, 0, 0, 0.1) 0px 4px 6px, rgba(0, 0, 0, 0) 0px 12px 13px, rgba(0, 0, 0, 0.1) 0px -3px 5px;
+    transition: 0.3s;
+}
+#eventList li:hover{
+    background-color:grey;
+    transition: 0.3s;
+    cursor: pointer;
+    padding: 10px;
+    margin: 10px;
+    
+}
+#eventTitle{
+    color:white;
+}
+#eventCategory{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 2px, rgba(0, 0, 0, 0) 0px -12px 30px, rgba(0, 0, 0, 0) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0) 0px -3px 5px;
+    position:absolute;
+    z-index: 1000;
+    background-color:grey;
+    color:white;
+    border: 0px;
+    border-radius: 10px; 
+    width:auto;
+    left:15px;
+    padding:2px;
+    opacity: 80%;
+}
+#eventDate{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 2px, rgba(0, 0, 0, 0) 0px -12px 30px, rgba(0, 0, 0, 0) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0) 0px -3px 5px;
+    position:absolute;
+    z-index: 1000;
+    background-color:grey;
+    color:white;
+    border: 0px;
+    border-radius: 10px; 
+    width:auto;
+    padding:2px;
+    opacity: 80%;
+    margin-left:65px;
+}
+#eventSearch{
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    position:absolute;
+    background-color: grey;
+    border:0px;
+    border-radius:10px; 
+    opacity: 80%;
+    right: 5px
+}
+#eventSearch:hover{
+    cursor:pointer;
+}
 /* Info panel buttons */
 @keyframes button-off{
     from{
@@ -522,5 +807,22 @@ html, body {
     }
     to{
         bottom:-100px;
+    }
+}
+
+@keyframes cityAlertShow{
+    from{
+        left:-300px;
+    }
+    to{
+        left:60px;
+    }
+}
+@keyframes cityAlertHide{
+    from{
+        left:60px;
+    }
+    to{
+        left:-300px;
     }
 }
